kubernetes/workloads/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: default
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
